Algunos cambios en las implemantaciones de las clases que ya estabas creadas . quitando los .txt para que no se suba al repositorio remoto

--- a/ProyecotdeRedes/ProyecotdeRedes.csproj
+++ b/ProyecotdeRedes/ProyecotdeRedes.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="output\" />
+    <Compile Remove="output\**" />
+    <EmbeddedResource Remove="output\**" />
+    <None Remove="output\**" />
   </ItemGroup>
 
 </Project>
